# ik-opengl

./: CMakeLists.txt  README.md  seg.frag
ik-opengl/: Camera.h  Chain.cpp  Chain.h  Mesh.h  Model.h  MultiChain.cpp  MultiChain.h  Segment.cpp  Segment.h  Shader.h  Target.cpp  Target.h  main.cpp
res/shaders/: debug_quad.fs  ground.fs  seg.fs  seg.vs  shader.vs  skybox.fs  skybox.vs
src/: Animation.cpp  Animation.h  Chain.cpp  Chain.h  DepthMap.cpp  Ground.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MultiChain.cpp  MultiChain.h  Segment.cpp  Segment.h  Shader.h  Skybox.cpp  Skybox.h  Target.cpp  Target.h  glad.c  main.cpp
src/action/: dance
src/background/: Ground.cpp  Ground.h  Skybox.cpp  Skybox.h
src/people/: Chain.h  MultiChain.cpp  MultiChain.h  Person.cpp  Person.h  Segment.cpp  Segment.h  Target.cpp  Target.h
src/utils/: Camera.h  DepthMap.h
