cmake_minimum_required(VERSION 3.13)
project(ik-opengl)
set(CMAKE_CXX_STANDARD 17)
include_directories(../include)
file(GLOB_RECURSE SRCS src/*.cpp src/*.c)
add_executable(${PROJECT_NAME} ${SRCS})
target_link_libraries(${PROJECT_NAME} glfw3 GL m Xrandr Xi X11 Xxf86vm pthread dl Xinerama Xcursor assimp)
add_definitions(-Wall)
